# GNNTrajectory

./: .gitignore  .gitmodules  README.md  argoverse1_dataset_processing.py  pyproject.toml  requirements.txt  test_argoverse2.py
checkpoint/: step_6090_epoch_70.pt
configs/: cluster_train.json  cluster_train_gat_lstm.json  cluster_train_gat_mlp.json  cluster_train_gcn_v2_lstm.json  cluster_train_gcn_v2_mlp.json  cluster_train_gcn_v2_mlp_with_edge_weights.json  cluster_train_gcn_v2_mlp_without_edge_weights.json  example_train.json  local_cpu_train.json
notebooks/: visualize_and_compare.ipynb
notebooks/data/0a09b183-3553-4c85-9a12-976409e4aeab/: log_map_archive_0a09b183-3553-4c85-9a12-976409e4aeab.json  scenario_0a09b183-3553-4c85-9a12-976409e4aeab.parquet
notebooks/data/0a0ef009-9d44-4399-99e6-50004d345f34/: log_map_archive_0a0ef009-9d44-4399-99e6-50004d345f34.json  scenario_0a0ef009-9d44-4399-99e6-50004d345f34.parquet
notebooks/data/0a1e6f0a-1817-4a98-b02e-db8c9327d151/: scenario_0a1e6f0a-1817-4a98-b02e-db8c9327d151.parquet
notebooks/data/0a2c19ce-b411-400a-ab56-8c40bc995ab1/: log_map_archive_0a2c19ce-b411-400a-ab56-8c40bc995ab1.json  scenario_0a2c19ce-b411-400a-ab56-8c40bc995ab1.parquet
scripts/: train_cluster.sh  train_cluster_gat_lstm.sh  train_cluster_gat_mlp.sh  train_cluster_gcn_v2_lstm.sh  train_cluster_gcn_v2_mlp.sh  train_cluster_gcn_v2_mlp_with_edge_weights.sh  train_cluster_gcn_v2_mlp_without_edge_weights.sh
src/gnn_trajectory/: __init__.py  config.py  losses.py  metrics.py  test_argoverse2.py  train.py  utils.py  visualize_predictions.py
(+66 files in other folders)
